@@ -18,29 +18,25 @@ package com.microsoft.playwright.impl;
 
 import com.microsoft.playwright.PlaywrightException;
 
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Objects;
+import java.util.Arrays;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 
 import static com.microsoft.playwright.impl.Utils.globToRegex;
+import static com.microsoft.playwright.impl.Utils.toJsRegexFlags;
 
 class UrlMatcher {
-  final Object rawSource;
-  private final Predicate<String> predicate;
-
-  private static Predicate<String> toPredicate(Pattern pattern) {
-    return s -> pattern.matcher(s).find();
-  }
-
-  static UrlMatcher any() {
-    return new UrlMatcher((Object) null, null);
-  }
+  private final String baseURL;
+  public final String glob;
+  public final Pattern pattern;
+  public final Predicate<String> predicate;
 
   static UrlMatcher forOneOf(URL baseUrl, Object object) {
     if (object == null) {
-      return UrlMatcher.any();
+      return new UrlMatcher(null, null, null, null);
     }
     if (object instanceof String) {
       return new UrlMatcher(baseUrl, (String) object);
@@ -55,34 +51,77 @@ class UrlMatcher {
   }
 
   static String resolveUrl(URL baseUrl, String spec) {
+    return resolveUrl(baseUrl.toString(), spec);
+  }
+
+  private static String resolveUrl(String baseUrl, String spec) {
     if (baseUrl == null) {
       return spec;
     }
     try {
-      return new URL(baseUrl, spec).toString();
-    } catch (MalformedURLException e) {
+      // Join using URI instead of URL since URL doesn't handle ws(s) protocols.
+      return new URI(baseUrl).resolve(spec).toString();
+    } catch (URISyntaxException e) {
       return spec;
     }
   }
 
-  UrlMatcher(URL base, String url) {
-    this(url, toPredicate(Pattern.compile(globToRegex(resolveUrl(base, url)))).or(s -> url == null || url.equals(s)));
+  private static String normaliseUrl(String spec) {
+    try {
+      // Align with the Node.js URL parser which automatically adds a slash to the path if it is empty.
+      URI url = new URI(spec);
+      if (url.getScheme() != null &&
+        Arrays.asList("http", "https", "ws", "wss").contains(url.getScheme()) &&
+        url.getPath().isEmpty()) {
+        return new URI(url.getScheme(), url.getAuthority(), "/", url.getQuery(), url.getFragment()).toString();
+      }
+      return url.toString();
+    } catch (URISyntaxException e) {
+      return spec;
+    }
+  }
+
+  UrlMatcher(URL baseURL, String glob) {
+    this(baseURL, glob, null, null);
   }
 
   UrlMatcher(Pattern pattern) {
-    this(pattern, toPredicate(pattern));
-  }
-  UrlMatcher(Predicate<String> predicate) {
-    this(predicate, predicate);
+    this(null, null, pattern, null);
   }
 
-  private UrlMatcher(Object rawSource, Predicate<String> predicate) {
-    this.rawSource = rawSource;
+  UrlMatcher(Predicate<String> predicate) {
+    this(null, null, null, predicate);
+  }
+
+  private UrlMatcher(URL baseURL, String glob, Pattern pattern, Predicate<String> predicate) {
+    this.baseURL = baseURL != null ? baseURL.toString() : null;
+    this.glob = glob;
+    this.pattern = pattern;
     this.predicate = predicate;
   }
 
   boolean test(String value) {
-    return predicate == null || predicate.test(value);
+    return testImpl(baseURL, pattern, predicate, glob, value);
+  }
+
+  private static boolean testImpl(String baseURL, Pattern pattern, Predicate<String> predicate, String glob, String value) {
+    if (pattern != null) {
+      return pattern.matcher(value).find();
+    }
+    if (predicate != null) {
+      return predicate.test(value);
+    }
+    if (glob != null) {
+      if (!glob.startsWith("*")) {
+        // Allow http(s) baseURL to match ws(s) urls.
+        if (baseURL != null && Pattern.compile("^https?://").matcher(baseURL).find() && Pattern.compile("^wss?://").matcher(value).find()) {
+          baseURL = baseURL.replaceFirst("^http", "ws");
+        }
+        glob = normaliseUrl(resolveUrl(baseURL, glob));
+      }
+      return Pattern.compile(globToRegex(glob)).matcher(value).find();
+    }
+    return true;
   }
 
   @Override
@@ -90,25 +129,38 @@ class UrlMatcher {
     if (this == o) return true;
     if (o == null || getClass() != o.getClass()) return false;
     UrlMatcher that = (UrlMatcher) o;
-    if (rawSource instanceof Pattern && that.rawSource instanceof Pattern) {
-      Pattern a = (Pattern) rawSource;
-      Pattern b = (Pattern) that.rawSource;
-      return a.pattern().equals(b.pattern()) && a.flags() == b.flags();
+    if (pattern != null) {
+      return that.pattern != null && pattern.pattern().equals(that.pattern.pattern()) && pattern.flags() == that.pattern.flags();
     }
-    return Objects.equals(rawSource, that.rawSource);
+    if (predicate != null) {
+      return predicate.equals(that.predicate);
+    }
+    if (glob != null) {
+      return glob.equals(that.glob);
+    }
+    return that.pattern == null  && that.predicate == null && that.glob == null;
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(rawSource);
+    if (pattern != null) {
+      return pattern.hashCode();
+    }
+    if (predicate != null) {
+      return predicate.hashCode();
+    }
+    if (glob != null) {
+      return glob.hashCode();
+    }
+    return 0;
   }
 
   @Override
   public String toString() {
-    if (rawSource == null)
-      return "<any>";
-    if (rawSource instanceof Predicate)
-      return "matching predicate";
-    return rawSource.toString();
+    if (pattern != null)
+      return String.format("<regex pattern=\"%s\" flags=\"%s\">", pattern.pattern(), toJsRegexFlags(pattern));
+    if (this.predicate != null)
+      return "<predicate>";
+    return String.format("<glob pattern=\"%s\">", glob);
   }
 }
